# teju-jagua-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
src/: lib.rs
src/teju/: common.rs  f32.rs  f64.rs  float.rs  fmt.rs  format.rs  mk_impl.rs  mod.rs
src/teju/lut/: f64.rs
