[package]
name = "teju"
version = "0.1.0-alpha1"
edition = "2024"
description = "Fast floating point to string conversion"
repository = "https://github.com/andrepd/teju-jagua-rs"
keywords = ["float", "ieee-754"]
categories = ["algorithms", "no-std"]
license = "LGPL-3.0"

[dependencies]
itoa = "1.0.15"

[dev-dependencies]
proptest = "1.6.0"
ryu = "1.0.20"
