[package]
name = "teju"
version = "0.1.1"
edition = "2024"
description = "Fast floating point to string conversion"
documentation = "https://docs.rs/teju"
repository = "https://github.com/andrepd/teju-jagua-rs"
keywords = ["float", "ieee-754"]
categories = ["algorithms", "no-std", "no-std::no-alloc", "value-formatting"]
license = "LGPL-3.0"

[dev-dependencies]
proptest = "1.6.0"
ryu = "1.0.20"
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
features = ["bench"]

[features]
bench = []
